# ChessEngine

./: CMakeLists.txt
src/: board.cpp  board.h  main.cpp  moveGenerator.cpp  moveGenerator.h
src/csv/: bishop_magic_table.csv  rook_magic_table.csv
